# origin-recreated-projects

./: .gitattributes  .gitignore  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
apm-agent-backend/: .env.example  README.md  pyproject.toml
apm-agent-backend/src/: app.py  main.py  retry_util.py
apm-agent-backend/src/routers/: alerts.py  health.py  metrics.py
apm-agent-backend/tests/: test_health.py
docs/: index.html  index.md  projects.md
procore-mcp-gateway/: .dev.vars.example  package-lock.json  package.json  tsconfig.json
procore-mcp-gateway/src/: index.js  index.ts  pkce.js  pkce.test.js  tools.js  util.ts
procore-mcp-gateway/tests/: util.test.ts
rag-system/: .env.example  README.md  requirements.txt
rag-system/db/: schema.sql
rag-system/db/synthetic/: sample_docs.csv
rag-system/src/: api.py  main.py  text_utils.py
rag-system/tests/: test_search.py
rfi-automation/: .env.example  README.md
rfi-automation/src/: excel_utils.py  rfi_export.py  rfi_processor.py  synthetic_data.csv
rfi-automation/tests/: test_export.py  test_rfi_processor.py
scripts/: dev_check.sh  measure.sh  redact_check.sh
