[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "apm-agent-backend"
version = "0.1.0"
dependencies = ["fastapi>=0.111.0","uvicorn>=0.30.0","pydantic>=2.6.0","pytest>=8.0.0","httpx>=0.27.0"]
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
